# verto

./: .env.example  .git-blame-ignore-revs  .gitattributes  .gitignore  .prettierignore  .prettierrc  AGENTS.md  DESIGN.md  PRODUCT.md  README.md  TECH_STACK.md  components.json  design-qa.md  eslint.config.mjs  index.html  mdx-components.tsx  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
.githooks/: pre-push
.github/: copilot-instructions.md
.github/workflows/: ci.yml  nightly.yml  release.yml
.goals/engineering-redesign-ui/: inspector-feedback-1.md  status.json
.goals/figma-design-recreation/: goal.md  inspector-feedback-1.md  (+3 more)
app/: apple-icon.tsx  codex-clone.css  codex-content.css  codex-desktop.css  codex-token-contract.test.ts  error-actions.test.tsx  error.tsx  global-error.tsx  globals.css  layout.tsx  manifest.ts  not-found.tsx  opengraph-image.tsx  page.tsx  polish.css  redesign.css
builtin-docs/: authoring.mdx  content-sources.mdx  getting-started.mdx  index.mdx  navigation.json
content/: demo.mdx  navigation.json
help-content/: navigation.json
lib/: activity.ts  agent-threads.ts  annotation-anchor.ts  annotation-dom.ts  annotations.ts  app-navigation.ts  bookmarks.ts  browser-local-folder.ts  collections.ts  connection-info.ts  content-source.ts  document-tabs.ts  format.ts  graph.ts  help-source.ts  home.ts  inbox.ts  library-rail.ts  local-folder.ts  mdx.ts  motion.ts  navigation.ts  onboarding.ts  reader-route-frame.test.ts  reader-route-frame.ts  reading-scroll.ts  reading-settings.ts  reading-state.ts  reading-time.ts  recent-documents.ts  runtime-github-cache.ts  runtime-local-folder.ts  runtime-local-index.ts  runtime-reader-source.ts  runtime-source-header.ts  search.ts  shell-surfaces.ts  shiki.ts  site.ts  source-info.ts  (+10 more)
scripts/: copy-excalidraw-assets.mjs  gen-builtin-manifest.mjs  import-epub.ts  tauri-build-unsigned.mjs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/src/: lib.rs  main.rs
types/: mdast-inline-comments.d.ts
(+604 files in other folders)
